feat [#260] AlbumResolver 및 AlbumStrategy 구현